Added flex, border, height and width  to container

--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 body {
     display: flex;
     background-color: grey;
+    justify-content: center;
+    align-items: center;
+}
+
+#container {
+    display: flex;
+    width: 25%;
+    height: 50%;
+    border: 10px;
+    border-color: black;
 }
 
